log
ju., 21 de abr. de 2022 15:54:12: 
 treemap.c | 34 +++++++++++++++++++++++-----------
 1 file changed, 23 insertions(+), 11 deletions(-)
 tests:  4|7
total_score: 5/70
3d11519
ju., 21 de abr. de 2022 16:07:29: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  6|7
total_score: 5/70
1310410
ju., 21 de abr. de 2022 16:08:31: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
480e9f4
ju., 21 de abr. de 2022 16:11:20: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value)
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7e2349f
ju., 21 de abr. de 2022 16:11:42: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:16: error: 'return' with a value, in function returning void [-Werror]
         return NULL;
                ^~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value)
      ^~~~~~~~~~~~~
treemap.c:56:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value)
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0fc6ca9
ju., 21 de abr. de 2022 16:12:03: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
77234eb
